# karobar_automation

./: d  hello.py  pyproject.toml  setup.sh
Api/: api_client.py  auth_api.py
Configurations/: config.ini
example/: pyproject.toml
pageObjects/: ExtractTextData.py  IncomeExpensePage.py  InventoryPage.py  LoginPage.py  ManageAccount.py  NavigateToPage.py  Party.py  PartyPage.py  PaymentInOut.py  PaymentInOutPage.py  TransactionPage.py
testCases/: conftest.py  test.py  test_end_to_end.py  test_login.py  test_transaction.py
testCases/__pycache__/: conftest.cpython-311-pytest-8.3.4.pyc.10036  test_end_to_end.cpython-311-pytest-8.3.4.pyc.10428  test_end_to_end.cpython-311-pytest-8.3.4.pyc.15456  test_end_to_end.cpython-311-pytest-8.3.4.pyc.16348  test_end_to_end.cpython-311-pytest-8.3.4.pyc.6456  test_end_to_end.cpython-311-pytest-8.3.4.pyc.6972  test_end_to_end.cpython-311-pytest-8.3.4.pyc.7380  test_end_to_end.cpython-311-pytest-8.3.4.pyc.9616
utilities/: FreshData.xlsx  GuidedKarobarData.xlsx  customLogger.py  excel_utils.py  readProperties.py
utils/: FreshData.xlsx  GuidedKarobarData.xlsx  customLogger.py  excel_utils.py  readProperties.py  ~$GuidedKarobarData.xlsx
