[project]
name = "karobar-revamp-selenium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "selenium>=4.27.1",
    "pandas>=2.2.3",
    "ruff>=0.8.6",
    "blinker>=1.9.0",
    "selenium-wire>=5.1.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.0.1",
]
