[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "ruff>=0.8.4",
]

[tool.uv.sources]
requests = { git = "https://github.com/psf/requests" }
